Rest API wrapper implementation, can run the test via swagger UI and returns the execution result as json
